--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>basic counter</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <style>
         .container {
             display: flex;
@@ -38,8 +42,9 @@
         .buttons {
             display: flex;
             justify-content: center;
-            margin-top: 20px;
+            /* margin-top: 20px; */
             gap: 7px;
+            
         }
 
         .btn1 {
@@ -59,6 +64,9 @@
             background-color: orangered;
             color: white;
             border: 2px solid white;
+        }
+        h1{
+            font-size:100px;
         }
     </style>
 </head>
@@ -81,11 +89,17 @@
         let reset = document.querySelector(".btn3")
         let change = document.querySelector("h1")
         let inc = 0;
-        let resetMessage = document.querySelector("message")
+        let resetMessage = document.querySelector(".message")
 
         increase.addEventListener("click", () => {
             inc++;
             change.innerHTML = inc;
+            if(inc == 34){
+                resetMessage.innerHTML = "34 completed"
+            }
+            setTimeout(()=>{
+                resetMessage.innerHTML = "";
+            },2000)
         })
         decrease.addEventListener("click", () => {
             inc--;
@@ -97,10 +111,10 @@
         reset.addEventListener("click", () => {
             inc = 0;
             change.innerHTML = inc;
-            resetMessage.innerHTML = "counter reset Done";
+            resetMessage.innerHTML = "counter Reset ✅";
             setTimeout(()=>{
                 resetMessage.innerHTML = " ";
-            },5000);
+            },1000);
         })
 
     </script>
